--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -3,7 +3,7 @@
     <head>
         <title>Skills</title>
         <style>
-            table, th, td {border: 1px sold black;}
+            table, th, tr, td {border: 1px sold black;}
         </style>
     </head>
     <body>
