--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -14,9 +14,10 @@
             
 
            <form action="https://formspree.io/f/xnnjzqrl" method="post">
-            <p>Please select your favoriate food:</p>
-            <label for="fname">First name:</label>
+           <p>Please enter your name:</p>
+           <label for="fname">First name:</label>
 <input type="text" id="fname" name="fname">
+            <p>Please select your favoriate food:</p>
             <input type="radio" id="food1" name="food" value="pizza">
             <label for="food1" >pizza</label><br>
             <input type="radio" id="food2" name="food" value="salad">
