--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -5,7 +5,7 @@
         <style>
             table, th, td {border: 1px solid black;}
         </style>
-         <link rel="styles.css" href="/lab06/skills.html/styles.css">
+         <link rel="stylesheet" href="/lab06/styles.css">
     </head>
     <body>
         <table>
