--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -20,7 +20,7 @@
             <td>Advanced</td>
             <td>Leading discussions and presentations</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Data Analysis</td>
             <td>Intermediate</td>
             <td>Coding using SQL and HTML</td>
@@ -30,7 +30,7 @@
             <td>Proficient</td>
             <td>Organizing and leading a team to meet deadlines</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Critical Thinking</td>
             <td>Advanced</td>
             <td>Problem solving and creative thinking</td>
@@ -40,7 +40,7 @@
             <td>Advanced</td>
             <td>Creating policy memos and detailed reports</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Communication</td>
             <td>Advanced</td>
             <td>As a TA I had a high level of communication with my students to ensure they were on the right track</td>
@@ -50,7 +50,7 @@
             <td>Proficient</td>
             <td>I take 18 credits a semester, while as being an admissions tour guide</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Research Skills</td>
             <td>Proficient</td>
             <td>Conducted research for an organization known as the Inclusive Alliance</td>
@@ -60,7 +60,7 @@
             <td>Advanced</td>
             <td>Certified in Microsoft word and excel</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
             <td>Advocation</td>
             <td>Advanced</td>
             <td>Having a learning disablility has taught me to use my voice so people know how I need support and how others need support</td>
