--- a/lab06/contact.html
+++ b/lab06/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Contact</title>
-        <link rel="styles" href="contact.html/style.css">
+        <link rel="stylesheet" href="/lab06/styles.css">
     </head>
     <body>
         <h1>Contact</h1>
