--- a/notes/participation7.html
+++ b/notes/participation7.html
@@ -6,7 +6,7 @@
     <title>Otto Background</title>
     <style>
         body {
-            background-image: url('otto.png'); 
+            background-image: url('otto.jng'); 
             background-repeat: repeat; 
             background-size: auto;
         }
