--- a/notes/participation7.html
+++ b/notes/participation7.html
@@ -6,7 +6,7 @@
     <title>Otto Background</title>
     <style>
         body {
-            background-image: url('otto.jng'); 
+            background-image: url('https://content.sportslogos.net/logos/34/859/full/syracuse_orange_logo_mascot_2006_sportslogosnet-3980.png'); 
             background-repeat: repeat; 
             background-size: auto;
         }
