--- a/notes/participation7.html
+++ b/notes/participation7.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-image: url('../images/otto.jpg'); 
-            background-repeat: repeat; 
+            background-repeat: repeat-x, repeat-y; 
             background-size: auto;
         }
 
