lab07/index.html

--- a/lab07/index.html
+++ b/lab07/index.html
@@ -7,6 +7,7 @@
         
     </head>
     <body>
+        <nav>index.html | skills.html| contact.html</nav>
         <h1>Jamie Taub's Biography</h1>
         
         <p>My name is Jamie Taub, I am currently a sophmore at Syracuse University studying <strong>Policy Studies and Society, Innovation, and Technology with a concentration in Project Management and a minor in History</strong> The combination of these two majors will allow me to prosue a career as a consultant, managing projects and operations for companies. To add on, my history minor reflects my passion for understanding the past and learning from its mistakes to create a better future. Moreover, some of my proudest accomplishments are making Dean’s list for the past three semesters, being a Teaching Assistant as a sophomore, holding a 3.7 GPA, earning the Founders Scholarship, and being an Invest Success Scholar. Outside of school, I love to spend time with my two sisters, my mom and dad, I enjoy spending time with friends, going on hikes, watching Hamilton, tutoring history, and giving campus tours as a University 100 tour guide.</p>
