--- a/lab07/index.html
+++ b/lab07/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <nav>
-            <link rel="Home|Skills|Contact" href="index.html|skills.html| contact.htm">
+            <li><a href="index.html">Home|</a></li>
+                <li><a href="skills.html">Skills|</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </nav>
         <h1>Jamie Taub's Biography</h1>
         
