--- a/lab07/index.html
+++ b/lab07/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <nav>
-            <li><a href="index.html">Home|</a></li>
-                <li><a href="skills.html">Skills|</a></li>
-                <li><a href="contact.html">Contact</a></li>
+            <a href="index.html">Home|</a>
+                <a href="skills.html">Skills|</a>
+                <a href="contact.html">Contact</a>
             </nav>
         <h1>Jamie Taub's Biography</h1>
         
