--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <nav>
+            <a href="index.html">Home|</a>
+                <a href="skills.html">Skills|</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         <h1>Contact</h1>
         <p> 70 Hofstra Drive </p>
             <p>Plainview, NY 11803</p>
