--- a/lab08/participation08.html
+++ b/lab08/participation08.html
@@ -8,7 +8,9 @@
     <title>Participation Week 08</title>
 
     <style>
-body {font-family: Verdana, Geneva, Tahoma, sans-serif;}
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 h1, h2{color: #3d1866;}
 .paragraph1 {
     background-color: #F76900 ; 
