--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -14,7 +14,7 @@
         <h1>Contact</h1>
         <p> 70 Hofstra Drive </p>
             <p>Plainview, NY 11803</p>
-           <p> <img src="../images/logo-sized.png" alt="linkedin"> <a href="www.linkedin.com/in/jamie-taub-159713214">My LinkedIn Profile</a> </p>
+           <p> <img src="../images/linkedin.svg" alt="linkedin"> <a href="www.linkedin.com/in/jamie-taub-159713214">My LinkedIn Profile</a> </p>
            <p> <a href="mailto:jrtaub@syr.edu">jrtaub@syr.edu</a> </p>
            <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.2251633714695!2d-73.45703476063896!3d40.801045632280356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e829f9e97c6c37%3A0x39c8ca6a8144f404!2s70%20Hofstra%20Dr%2C%20Plainview%2C%20NY%2011803!5e0!3m2!1sen!2sus!4v1738190866030!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </p>
             
