--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -18,7 +18,11 @@
                   <p>Plainview, NY 11803</p>
             </div>
             <div>
-              <p> <img src="../images/linkedin.svg" alt="linkedin"> <a href="www.linkedin.com/in/jamie-taub-159713214">My LinkedIn Profile</a> </p>
+                <p class="linkedin-container">
+                    <img src="../images/linkedin.svg" alt="LinkedIn" class="linkedin-logo">
+                    <a href="https://www.linkedin.com/in/jamie-taub-159713214">My LinkedIn Profile</a>
+                </p>
+                 </p>
                  <p> <a href="mailto:jrtaub@syr.edu">jrtaub@syr.edu</a> </p>
                  
             </div>
