--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -13,11 +13,11 @@
             </nav>
         <h1>Contact</h1>
         <div class="flex-container">
-            <div>
+            <div class="contact-info">
               <p> 70 Hofstra Drive </p>
                   <p>Plainview, NY 11803</p>
             </div>
-            <div>
+            <div class="social-links">
                 <p class="linkedin-container">
                     <img src="../images/linkedin.svg" alt="LinkedIn" class="linkedin-logo">
                     <a href="https://www.linkedin.com/in/jamie-taub-159713214">My LinkedIn Profile</a>
@@ -29,7 +29,7 @@
           </div>
       
           <div class="form-map-container">
-           <div>
+           <div class="food-options">
               <form action="https://formspree.io/f/xnnjzqrl" method="post">
                   <p>Please enter your name:</p>
                   <label for="fname">First name:</label>
