--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -14,7 +14,7 @@
         <h1>Contact</h1>
         <div class="flex-container">
             <div class="contact-info">
-                <h1>Address</h1>
+                <p class="address-heading">Address</p>
               <p> 70 Hofstra Drive </p>
                   <p>Plainview, NY 11803</p>
             </div>
