--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -32,8 +32,7 @@
           <div class="form-map-container">
            <div class="food-options">
               <form action="https://formspree.io/f/xnnjzqrl" method="post">
-                  <p>Please enter your name:</p>
-                  <label for="fname">First name:</label>
+                  <p class="form-heading">Please enter your name:</p>
        <input type="text" id="fname" name="fname">
                    <p>Please select your favoriate food:</p>
                    <input type="radio" id="food1" name="food" value="pizza">
