--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -34,7 +34,7 @@
               <form action="https://formspree.io/f/xnnjzqrl" method="post">
                   <p class="form-heading">Please enter your name:</p>
        <input type="text" id="fname" name="fname">
-                   <p>Please select your favoriate food:</p>
+                   <p class="form-heading">Please select your favoriate food:</p>
                    <input type="radio" id="food1" name="food" value="pizza">
                    <label for="food1" >pizza</label><br>
                    <input type="radio" id="food2" name="food" value="salad">
@@ -42,7 +42,7 @@
                    <input type="radio" id="food3" name="food" value="sushi">
                    <label for="food3">sushi</label><br>
                    <br>
-                   <label for="comments">Comments</label>
+                   <label class="form-heading">Comments</label>
                <br>
                <textarea id="comments" name="comments"></textarea>
                 <br>
