--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -34,7 +34,7 @@
               <form action="https://formspree.io/f/xnnjzqrl" method="post">
                   <p class="form-heading">Please enter your name:</p>
        <input type="text" id="fname" name="fname">
-                   <p class="form-heading">Please select your favoriate food:</p>
+                   <p class="form-heading">Please select your favorite food:</p>
                    <input type="radio" id="food1" name="food" value="pizza">
                    <label for="food1" >pizza</label><br>
                    <input type="radio" id="food2" name="food" value="salad">
