--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -4,6 +4,7 @@
         <title>Skills</title>
         <style>
             table, th, td {border: 1px solid black;}
+            h1{text-align: center;}
         </style>
          <link rel="stylesheet" href="styles.css">
     </head>
