--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -17,7 +17,35 @@
             <h1>Skills</h1>
             <p>On this page, you will find a list of my key technical skills and proficiency levels. These skills range from communication and project management to technical abilities in data analysis and Microsoft software. Each skill is accompanied by a brief description of how I apply it in my academic and professional work.</p>
 
-        <table>
+            <i class="fa-brands fa-microsoft"></i><br>
+            
+
+            <i class="fa-solid fa-code"></i><br>
+
+
+            <i class="fa-solid fa-timer"></i><br>
+
+
+            <i class="fa-solid fa-bullhorn"></i><br>
+
+            <i class="fa-solid fa-books"></i>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+       <!--  <table>
         <caption>Skills</caption>
         <tr>
             <th>Skill</th>
@@ -76,5 +104,6 @@
         </tr>
 
       </table>  
+      -->
     </body>
     </html>
