--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -24,6 +24,25 @@
                 color: #333;
                 margin-top: 5px;
             }
+            nav {
+                background-color: #4CAF50;
+                padding: 10px;
+                text-align: center;
+            }
+            nav a {
+                color: white;
+                padding: 10px 20px;
+                text-decoration: none;
+            }
+            nav a:hover {
+                background-color: #45a049;}
+
+                p {
+                text-align: center;
+                font-size: 18px;
+                margin: 10px;
+                color: #555;
+            }
         </style>
     </head>
     <body>
