lab09/skills.html

--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -22,27 +22,8 @@
                 display: block;
                 font-size: 18px;
                 color: #333;
-                margin-top: 5px;
-            }
-            nav {
-                background-color: #4CAF50;
-                padding: 10px;
-                text-align: center;
-            }
-            nav a {
-                color: white;
-                padding: 10px 20px;
-                text-decoration: none;
-            }
-            nav a:hover {
-                background-color: #45a049;}
-
-                p {
-                text-align: center;
-                font-size: 18px;
-                margin: 10px;
-                color: #555;
-            }
+                margin-top: 5px;}
+            
         </style>
     </head>
     <body>
@@ -63,10 +44,10 @@
 
             <!-- Code icon -->
             <i class="fa-solid fa-code"></i><br>
-            <span>Coding</span><br><br>
+            <span>SQL</span><br><br>
 
             <!-- Timer icon -->
-            <i class="fa-solid fa-timer"></i><br>
+            <i class="fa-regular fa-clock"></i>
             <span>Time Management</span><br><br>
 
             <!-- Bullhorn icon -->
@@ -74,7 +55,7 @@
             <span>Public Speaking</span><br><br>
 
             <!-- Books icon -->
-            <i class="fa-solid fa-books"></i><br>
+            <i class="fa-solid fa-magnifying-glass"></i><br>
             <span>Research Skills</span><br><br>
         </div>
     </body>
