--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -25,6 +25,13 @@
                 margin-left: auto;
                 margin-right: auto;
             }
+
+
+            .flexbox-2 {
+                display: flex;
+                justify-content: space-between;
+                margin-top: 40px;
+            }
             
             
         </style>
@@ -39,7 +46,7 @@
         <h1>Technical Skills</h1>
 
         <p>My career has been focused on web development, and I’ve consistently learned new frameworks and languages as web technologies evolve. Below are my core skills.</p>
-
+        <div class="flexbox-2">
         <div class="icon-container">
             <div>
             <i class="fa-brands fa-microsoft"></i><br>
@@ -76,7 +83,7 @@
                 <li>Writing Skills</li>
             </ul>
         </aside>
-
+        </div>
 
 
     </body>
