--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -13,6 +13,7 @@
                 align-items: center;
                 flex-wrap: wrap; /* Allow the icons to wrap to the next line if necessary */
                 margin-top: 20px;
+                flex: 3;
             }
             
             aside {
@@ -21,9 +22,10 @@
                 padding: 20px;
                 margin-top: 40px;
                 border-radius: 10px; /* Curved corners */
-                width: 80%;
+                width: 50%;
                 margin-left: auto;
                 margin-right: auto;
+                flex: 1; 
             }
 
 
