--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -9,7 +9,7 @@
              h1{text-align: center;}
              .icon-container {
                 display: flex;
-                justify-content: center;
+                justify-content: space-around;
                 align-items: center;
                 flex-wrap: wrap; /* Allow the icons to wrap to the next line if necessary */
                 margin-top: 20px;
@@ -22,7 +22,7 @@
                 padding: 20px;
                 margin-top: 50px;
                 border-radius: 10px; /* Curved corners */
-                width: 20%;
+                width: 15%;
                 margin-left: auto;
                 margin-right: auto;
                 flex: 1; 
