--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -61,7 +61,7 @@
             </div>
 
             <div>
-            <i class="fa-regular fa-clock"></i>
+            <i class="fa-regular fa-clock"></i><br>
             <span>Time Management</span><br><br>
         </div>
 
