--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -90,7 +90,7 @@
         <div class="content">
             <h1>Technical Skills</h1>
 
-            <p>My career has been focused on web development, and I’ve consistently learned new frameworks and languages as web technologies evolve. Below are my core skills.</p>
+            <p>On this page, you will find a list of my key technical skills and proficiency levels. These skills range from communication and project management to technical abilities in data analysis and Microsoft software. Each skill is accompanied by a brief description of how I apply it in my academic and professional work.</p>
 
             
             <div class="flexbox-2">
