--- a/notes/week10notes.html
+++ b/notes/week10notes.html
@@ -13,6 +13,7 @@
         flex-wrap: wrap;}
             .row1 div {
                 padding: 40px;
+                flex: 1;
             }
 
             .banner{max-width: 100%;}
