--- a/lab10/index.html
+++ b/lab10/index.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">Home|</a>
-                <a href="skills.html">Skills|</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+            <a href="index.html">Home<span>|</span></a>
+            <a href="skills.html">Skills<span>|</span></a>
+            <a href="contact.html">Contact</a>
+        </nav>
         <h1>Jamie Taub's Biography</h1>
         <main>
             <img src="../images/selfphotoupdated.png" alt="linkedin" class="self"> 
