--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Skills</title>
         <link rel="stylesheet" href="styles.css">
         
@@ -81,11 +83,10 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">Home |</a>
-            <a href="skills.html">Skills |</a>
+            <a href="index.html">Home<span>|</span></a>
+            <a href="skills.html">Skills<span>|</span></a>
             <a href="contact.html">Contact</a>
         </nav>
-
         
         <div class="content">
             <h1>Technical Skills</h1>
