--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -2,15 +2,16 @@
 <html lang ="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <nav>
-            <a href="index.html">Home|</a>
-                <a href="skills.html">Skills|</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+            <a href="index.html">Home<span>|</span></a>
+            <a href="skills.html">Skills<span>|</span></a>
+            <a href="contact.html">Contact</a>
+        </nav>
         <h1>Contact</h1>
         <div class="flex-container">
             <div class="contact-info">
