--- a/project5/Personal Stories.html
+++ b/project5/Personal Stories.html
@@ -8,7 +8,7 @@
 <body>
    
 <h1>Personal Stories:</h1>
-<img src="../images/professional photo zoomed out.jpeg" alt="Jamie" class="page3"> 
+<img src="../images/Jamie.jpeg" alt="Jamie" class="page3"> 
 <p>“Growing up with dyslexia has been both a challenge and a defining part of my 
     journey. In first grade I struggled with reading, spelling, and math, often feeling lost and resorting to 
     "faking it" just to keep up. To figure out what was wrong, my parents had me tested where I was 
