--- a/project5/home.html
+++ b/project5/home.html
@@ -6,6 +6,11 @@
        
     </head>
 <body>
+    <nav>
+        <a href="home.html">Home|</a>
+        <a href="Research and Initiatives.html">Research and Initiatives|</a>
+        <a href="Personal Stories.html">Personal Stories</a>
+    </nav>
     <img src="../images/dyslexia.png" alt="dyslexia" class="home"> 
     <h1>What is dyslexia?</h1>
     <p>As defined by the Mayo Clinic, dyslexia is a learning disability that causes difficulty in 
