Update Research and Initiatives.html

--- a/project5/Research and Initiatives.html
+++ b/project5/Research and Initiatives.html
@@ -6,6 +6,11 @@
        
     </head>
 <body>
+    <nav>
+        <a href="home.html">Home|</a>
+        <a href="Research and Initiatives.html">Research and Initiatives|</a>
+        <a href="Personal Stories.html">Personal Stories</a>
+    </nav>
     <h1>Research Studies</h1>
     <img src="../images/brain.png" alt="figure2" class="page2"> 
     <p>A research study from December of 2024 investigated polygenic disposition in the brain of an individual 
