--- a/project5/Personal Stories.html
+++ b/project5/Personal Stories.html
@@ -6,7 +6,11 @@
        
     </head>
 <body>
-   
+    <nav>
+        <a href="home.html">Home|</a>
+        <a href="Research and Initiatives.html">Research and Initiatives|</a>
+        <a href="Personal Stories.html">Personal Stories</a>
+    </nav>
 <h1>Personal Stories:</h1>
 <img src="../images/Professional photo zoomed in.jpeg" alt="Jamie" class="page3"> 
 <p>“Growing up with dyslexia has been both a challenge and a defining part of my 
