project5/Stories.html

--- a/project5/Stories.html
+++ b/project5/Stories.html
@@ -8,8 +8,8 @@
 <body>
     <nav>
         <a href="home.html">Home|</a>
-        <a href="Research and Initiatives.html">Research and Initiatives|</a>
-        <a href="Personal Stories.html">Personal Stories</a>
+        <a href="Research.html">Research and Initiatives|</a>
+        <a href="Stories.html">Personal Stories</a>
     </nav>
 <h1>Personal Stories:</h1>
 <img src="../images/Professional photo zoomed in.jpeg" alt="Jamie" class="page3"> 
