--- a/project5/Research.html
+++ b/project5/Research.html
@@ -8,8 +8,8 @@
 <body>
     <nav>
         <a href="home.html">Home|</a>
-        <a href="Research and Initiatives.html">Research and Initiatives|</a>
-        <a href="Personal Stories.html">Personal Stories</a>
+        <a href="Research.html">Research and Initiatives|</a>
+        <a href="Stories.html">Personal Stories</a>
     </nav>
     <h1>Research Studies</h1>
     <img src="../images/brain.png" alt="figure2" class="page2"> 
