--- a/project5/home.html
+++ b/project5/home.html
@@ -8,8 +8,8 @@
 <body>
     <nav>
         <a href="home.html">Home|</a>
-        <a href="Research and Initiatives.html">Research and Initiatives|</a>
-        <a href="Personal Stories.html">Personal Stories</a>
+        <a href="Research.html">Research and Initiatives|</a>
+        <a href="Stories.html">Personal Stories</a>
     </nav>
     <img src="../images/dyslexia.png" alt="dyslexia" class="home"> 
     <h1>What is dyslexia?</h1>
