project6/projectstyles.css

--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -2,16 +2,18 @@
 <html lang ="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Stories</title>
         <link rel="stylesheet" href="projectstyles.css">
     </head>
 <body>
     <nav>
-        <a href="home.html">Home|</a>
-        <a href="Research.html">Research and Initiatives|</a>
+        <a href="home.html">Home<span>|</span></a>
+        <a href="Research.html">Research and Initiatives<span>|</span</a>
         <a href="Stories.html">Personal Stories</a>
     </nav>
 <h1>Personal Stories:</h1>
+<div class="jamie">
 <img src="../images/Professional photo zoomed in.jpeg" alt="Jamie" class="page3"> 
 <p>“Growing up with dyslexia has been both a challenge and a defining part of my 
     journey. In first grade I struggled with reading, spelling, and math, often feeling lost and resorting to 
@@ -28,7 +30,8 @@
     those who feel unheard, and the passion to pursue a future in public service where I can fight for equal 
     opportunities for all."
     -Jamie Taub, age 19</p><br>
-
+</div>
+     <div class="nina">
     <img src="../images/nina.JPG" alt="Nina" class="page3"> 
     <p>“Growing up I always felt like there was something wrong with me. I always 
         wondered why all my peers were reading Harry Potter and Mystery Tree House while I was still 
@@ -45,7 +48,8 @@
         that I am not just dumb but I am at a disadvantage but I also have the tools and resources to feel 
         confident with my dyslexia.”
     -Nina Grappone, age 20</p><br>
-
+</div>
+    <div class="michelle">
     <img src="../images/Michelle Head Shot.jpeg" alt="Michelle" class="page3"> 
     <p>“ My parents knew from an early age that I struggled in school. My mother was 
         told by my 1st grade teacher that “not all kids go to college”. At that time, I was considered an average 
@@ -64,6 +68,7 @@
         University and graduated with my MSW.”
         -Michelle Taub, age 51
         </p>
+    </div>
 
 
 </body>
