project6/Stories.html

--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="home.html">Home<span>|</span></a>
-        <a href="Research.html">Research and Initiatives<span>|</span</a>
+        <a href="Research.html">Research and Initiatives<span>|</span></a>
         <a href="Stories.html">Personal Stories</a>
     </nav>
 <h1>Personal Stories:</h1>
