lab11/lab11_preview.html

--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -7,7 +7,13 @@
     <title>Lab 11</title>
     <link rel="stylesheet" href="https://peopel-su.github.io/ist263/images/animate.css">
     <script>
-        alert('You won!');
+        function WinnerMessage () {
+            alert('You won!');
+        }
+        function TryAgain () {
+            alert('Wrong Shell - Try Again');
+        }
+        
     </script>
 </head>
 <body>
