--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <h1>Choose a Walnut</h1>
-    <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="first walnut" class="first">
-    <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="second walnut" class="second">
-    <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="third walnut" class="third">
+    <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="first walnut" onclick="WinnerMessage ();">
+    <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="second walnut" onclick="TryAgain ();">
+    <img src="https://peopel-su.github.io/ist263/images/walnut.png" alt="third walnut" onclick="TryAgain ();">
 </body>
 </html>
