--- a/notes/unit12.html
+++ b/notes/unit12.html
@@ -19,7 +19,7 @@
     <h1>My JavaScript Quiz</h1>
     <p>Java and JavaScript are the same thing.</p>
     <p onclick="wrongAnswer ();" id="wrong">True</p>
-    <p click="rightAnswer()" id="correct">Fasle</p>
+    <p onclick="rightAnswer ();" id="correct">Fasle</p>
 
 
 </body>
