notes/unit12p.html

--- a/notes/unit12.html
+++ b/notes/unit12.html
@@ -9,7 +9,7 @@
             document.getElementById("wrong").innerHTML = "<span style= 'color: red;'> True is the wrong answer!</span>"
         }
         function rightAnswer () {
-            document.ElementById("correct").innerHTML = "<span style='color: green;'>False is the correct answer!</span>"
+            document.getElementById("correct").innerHTML = "<span style='color: green;'>False is the correct answer!</span>"
         }
     </script>
     
