lab12/lab12.html

--- a/notes/unit12p.html
+++ b/notes/unit12p.html
@@ -11,7 +11,7 @@
     </script>
 </head>
 <body>
-    <h1>Text Change Example</h1>
-    <p onclick="changeText();" id="cuse">Syracuse University</p>
+    <h1>Participation 12</h1>
+    <div onclick="changeText();" id="cuse">Syracuse University</div>
 </body>
 </html>
