--- a/lab12/lab12.html
+++ b/lab12/lab12.html
@@ -5,74 +5,36 @@
      <title>Lab 12 Slideshow</title>
      <style>
       body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
     background-color: #111111;
     color: #ffffff;
 }
-
 #slideshow-container {
     background-color: #000000;
     width: 1200px;
-    margin: auto;
+    margin: auto; /* margin auto is centering this container */        
 }
-
-#planetinfo {
-    padding: 20px;
-    float: left; /* Float the planet text to the left */
-    width: 55%; /* Set width to create space for the image */
+#bigimages {float: left;}
+#planetinfo {padding: 20px;
+    float: right; /* Float the planet text to the left */
+    vertical-align: middle;
     text-align: left;
-    margin-top: 0;
-    margin-left: 20px; /* Space between text and image */
+    
 }
 
-#bigimages {
-    float: left; /* Float the image to the left */
-}
+#thumbnails {width: 840px; margin: auto; padding-top: 20px; clear:both;} 
+/* ^^ margin auto is centering this container */
 
-#planetinfo h1 {
-    font-size: 32px;
-    margin: 0;
-    padding-bottom: 10px;
-}
 
-#planetinfo p {
-    font-size: 18px;
-    margin: 0;
-    padding: 10px 0;
-}
 
-#thumbnails {
-    clear: both; /* Clear previous floats */
-    width: 100%;
-    margin: 20px auto;
-    text-align: center; /* Center thumbnails */
-    padding-top: 20px;
-}
 
-#thumbnails img {
-    width: 100px;
-    margin-right: 10px; /* Space out the thumbnails */
-}
+#mercurythumb, #venusthumb, #earththumb, #marsthumb, #jupiterthumb, #saturnthumb, #uranusthumb, #neptunethumb 
+{width: 100px;}
 
-#bigimages img {
-    width: 500px; /* Set a fixed width for the main image */
-    height: auto;
-}
-
-/* Initially display only Mercury */
-#mercury, #mercuryinfo {
-    display: block;
-    clear: both;
-}
-
-/* Hide all planets except the currently displayed one */
 #venus, #earth, #mars, #jupiter, #saturn, #uranus, #neptune,
 #venusinfo, #earthinfo, #marsinfo, #jupiterinfo, #saturninfo, #uranusinfo, #neptuneinfo {
-    display: none;
+display: none;
 }
-
-
-
 
 
      </style>
