--- a/project5/Stories.html
+++ b/project5/Stories.html
@@ -12,7 +12,7 @@
         <a href="Stories.html">Personal Stories</a>
     </nav>
 <h1>Personal Stories:</h1>
-<img src="../images/Professional photo zoomed in.jpeg" alt="Jamie" class="page3"> 
+<img src="../images/jamiet.jpeg" alt="Jamie" class="page3"> 
 <p>“Growing up with dyslexia has been both a challenge and a defining part of my 
     journey. In first grade I struggled with reading, spelling, and math, often feeling lost and resorting to 
     "faking it" just to keep up. To figure out what was wrong, my parents had me tested where I was 
@@ -46,7 +46,7 @@
         confident with my dyslexia.”
     -Nina Grappone, age 20</p><br>
 
-    <img src="../images/Michelle Head Shot.jpeg" alt="Michelle" class="page3"> 
+    <img src="../images/MichelleHeadShot.jpeg" alt="Michelle" class="page3"> 
     <p>“ My parents knew from an early age that I struggled in school. My mother was 
         told by my 1st grade teacher that “not all kids go to college”. At that time, I was considered an average 
         student in school, I got Cs and Bs but there was always a discrepancy, I could remember material easily 
