--- a/project6/Research.html
+++ b/project6/Research.html
@@ -16,19 +16,18 @@
     <p>A research study from December of 2024 investigated polygenic disposition in the brain of an individual 
         with dyslexia. The research looked to further understand how predispositions for dyslexia contribute to
         how the brain is structured and how it functions. To conduct the research, research used data from UK 
-        Biobank and analyzed information through brain imaging and genetic information. The study helped to 
-        provide meaningful insights into how genetic predispositions influence multiple neural pathways related 
+        Biobank and analyzed information through brain imaging and genetic information.</p>
+        <p>The study helped toprovide meaningful insights into how genetic predispositions influence multiple neural pathways related 
         to dyslexia. One conclusion that the researchers made wad that individuals with a higher genetic risk for 
         dyslexia displayed reduced brain volume in regions such as the internal capsule and motor cortex, which 
         are both jet regions for motor coordination and speech articulation. Furthermore, structional variations
         were also indicated in language-processing regions. These regions include the superior temporal gyrus 
-        and inferior frontal gyrus which are both essential in phonological awareness and speech perception.
-        The study also emphasized differences in visual processing areas, including the occipitotemporal cortex, 
+        and inferior frontal gyrus which are both essential in phonological awareness and speech perception.</p>
+         <p>The study also emphasized differences in visual processing areas, including the occipitotemporal cortex, 
         which is responsible for word recognition and fluent reading. Moreover, the research found alterations 
         in the prefrontal cortex, a region associated with executive functions including working memory and 
         cognitive control, eluting to the fact that dyslexia can involve more cognitive challenges then just 
-        reading difficulties. The research works to highlight the complex neurobiological basis of dyslexia, 
-        demonstrating that it is not caused by a single deficit but by multiple, distinct neural pathways 
+        reading difficulties.The research works to highlight the complex neurobiological basis of dyslexia, demonstrating that it is not caused by a single deficit but by multiple, distinct neural pathways 
         interacting with genetic factors.</p><br>
           
         <img src="../images/dyslexiabrain.png" alt="figure4" class="page2"> 
@@ -40,8 +39,8 @@
             executive function compared to typical readers. Moreover, task-related functional connectivity in 
             networks responsible for language processing, attention, and cognitive control was significantly 
             impaired, revealing that dyslexia is associated with impaired communication between these regions
-            rather than isolated deficits. The study also established a direct link between these neural disruptions 
-            and behavioral performance, confirming that the severity of connectivity issues correlates with reading 
+            rather than isolated deficits. </p>
+            <p>The study also established a direct link between these neural disruptions and behavioral performance, confirming that the severity of connectivity issues correlates with reading 
             difficulties. The findings from this research display that dyslexia is not a localized brain dysfunction but 
             rather many or one large, connected problem in the brain. It is important to understanding how these 
             disrupted connections act as a sign of neural markers for dyslexia and how they may inform targeted 
@@ -55,8 +54,8 @@
                 Technology, which enhances skill-building and reinforcement, and Assistive Technology, which enables 
                 students to complete tasks independently that they might otherwise find challenging. The article 
                 highlights that the effective integration of technology can improve literacy skills, boost motivation, and 
-                foster self-confidence in students with learning disabilities or difficulties. The research also 
-                demonstrates the importance of choosing the right technology based on individual needs, as not all 
+                foster self-confidence in students with learning disabilities or difficulties.</p>
+                <p>The research also demonstrates the importance of choosing the right technology based on individual needs, as not all 
                 tools are equally effective for every student. As technology continues on the rise and becomes more 
                 available, students now have greater opportunities to customize their learning experiences through 
                 text-to-speech software, audiobooks, speech recognition, and other adaptive technologies. The article 
