--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -15,7 +15,7 @@
     </nav>
 <h1>Personal Stories:</h1>
 <div class="jamie">
-<img src="../images/Professionalphotozoomedin.jpeg" alt="Jamie" class="page3"> 
+<img src="../images/jamiet.jpeg" alt="Jamie" class="page3"> 
 <p>“Growing up with dyslexia has been both a challenge and a defining part of my 
     journey. In first grade I struggled with reading, spelling, and math, often feeling lost and resorting to 
     "faking it" just to keep up. To figure out what was wrong, my parents had me tested where I was 
