--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Stories</title>
         <link rel="stylesheet" href="projectstyles.css">
-       
+       <style>
+        .page3{max-width: 100%;}
+       </style>
     </head>
 <body>
     <nav>
