--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -6,7 +6,9 @@
         <title>Personal Stories</title>
         <link rel="stylesheet" href="projectstyles.css">
        <style>
-        .page3{max-width: 100%;}
+        .jamie{max-width: 100%;}
+        .nina{max-width: 100%;}
+        .michelle{max-width: 100%;}
        </style>
     </head>
 <body>
