--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -32,7 +32,7 @@
     over again. Through hard work, I advanced into AP classes and showed that my learning disability did 
     not define my abilities. My experience has driven me to educate others about dyslexia, advocating for 
     those who feel unheard, and the passion to pursue a future in public service where I can fight for equal 
-    opportunities for all."
+    opportunities for all."<br>
     -Jamie Taub, age 19</p><br>
 </div>
      <div class="nina">
@@ -50,7 +50,7 @@
         support. I was able to seek help from teachers and reading specialist to help me find tools to work with 
         my dyslexia. Today I feel less anxious and stress when having to read in front of people because I know 
         that I am not just dumb but I am at a disadvantage but I also have the tools and resources to feel 
-        confident with my dyslexia.”
+        confident with my dyslexia.”<br>
     -Nina Grappone, age 20</p><br>
 </div>
     <div class="michelle">
@@ -69,7 +69,7 @@
         well on the SAT, but I always had a great attitude. In 11th grade, I finally figured out my own strategies 
         and started to do much better in school. I attended Syracuse University and graduated with a Policy 
         Studies major and a dual minor in Sociology and Child/Family Studies. I then attended Columbia 
-        University and graduated with my MSW.”
+        University and graduated with my MSW.”<br>
         -Michelle Taub, age 51
         </p>
     </div>
