--- a/project6/Stories.html
+++ b/project6/Stories.html
@@ -31,8 +31,7 @@
     different teaching styles and misconceptions about dyslexia made me feel like I had to prove myself all 
     over again. Through hard work, I advanced into AP classes and showed that my learning disability did 
     not define my abilities. My experience has driven me to educate others about dyslexia, advocating for 
-    those who feel unheard, and the passion to pursue a future in public service where I can fight for equal 
-    opportunities for all."<br>
+    those who feel unheard, and the passion to pursue a future in public service where I can fight for equal opportunities for all."<br>
     -Jamie Taub, age 19</p><br>
 </div>
      <div class="nina">
